--- a/my_app/templates/addtask.html
+++ b/my_app/templates/addtask.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="" method="post">
-        {%csrf_token%}
-        {{form}}
-        <button type="submit"> submit </button><br><br>
-        <a href="{% url 'read' %}"> view task</a> <br>
-        <a href="{% url 'logout' %}">logout</a>
-    </form>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block diffrentbody %}
+<style>
+    label{
+        display: none;
+    }
+</style>
+
+<div class=" container justify-content-center mx-auto border border-white p-2 mt-3 w-50">
+    <h1 class="text-center">Add Ur task</h1>
+    {{form.as_p}}
+    <button type="submit" class="btn btn-success "> ADD </button>
+</div>
+{% endblock %}
